# three-pages

./: .gitignore  .npmrc  .vercelignore  AUDIO_IMPROVEMENTS.md  DATABASE_TROUBLESHOOTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  FIX_DATABASE.md  OPTIMIZATION_SUMMARY.md  README.md  RENDER_DEPLOYMENT.md  VERCEL_DEPLOYMENT.md  check_db.sh  deploy_render.sh  package.json  performance_test.sh  pnpm-lock.yaml  render.yaml  test_audio.sh  turbo.json  vercel.json  verify_deployment.sh
apps/api/: .env.example  Cargo.toml  README.md
apps/api/src/: main.rs
apps/api/src/api/: routes.rs
apps/api/src/api/handlers/: audio.rs  books.rs  health.rs  mod.rs  search.rs  summary.rs
apps/api/src/config/: settings.rs
apps/api/src/middleware/: cors.rs  mod.rs
apps/api/src/models/: api_response.rs  audio.rs  book.rs  mod.rs  search.rs  summary.rs
apps/api/src/services/: mod.rs
apps/api/src/services/books/: aggregator.rs  google_books.rs  gutenberg.rs  mod.rs  open_library.rs
apps/api/src/services/cache/: mod.rs
apps/api/src/services/huggingface/: client.rs  mod.rs  nlp.rs  summarizer.rs  tts.rs
apps/api/src/services/storage/: database.rs  mod.rs
apps/api/src/utils/: errors.rs  mod.rs  text.rs  validators.rs
apps/docs/: eslint.config.js  package.json  tsconfig.json
apps/docs/app/: page.tsx
apps/web/: .env.example  .env.local.example  index.html  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.js
apps/web/src/: App.tsx  vite.env.d.ts
apps/web/src/components/animated/: AnimatedContainer.tsx  index.ts
apps/web/src/components/audio/: AudioPlayer.tsx
apps/web/src/components/book/: BookDetail.tsx
apps/web/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
apps/web/src/components/search/: BookCard.tsx  SearchBar.tsx  SearchResults.tsx  index.ts
apps/web/src/components/shared/: Button.tsx  Card.tsx  (+2 more)
apps/web/src/hooks/: index.ts  useAudio.tsx  useBookDetail.tsx  useBookSearch.tsx  useSummary.tsx
apps/web/src/lib/: constants.ts  utils.ts  utils.tsx
apps/web/src/services/: api.ts  audioService.ts  bookService.ts  summaryService.ts
apps/web/src/styles/: globals.css
apps/web/src/types/: api.ts  audio.ts  book.ts  index.ts  search.ts  summary.ts
apps/web/src/utils/: animations.ts
migrations/: 001_initial_schema.sql
three-pages/: package.json
(+4 files in other folders)
